# Oncall-AI-agent

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
examples/: aws_cloudwatch_example.py  azure_monitor_example.py  gcp_cloud_example.py  github_integration_example.py  llm_integration_example.py  runbook_integration_example.py  unified_runtime_example.py
examples/configurations/: aws_config.yaml  azure_config.yaml  gcp_config.yaml  github_config.yaml  llm_config.yaml  runbook_config.yaml
oncall_agent/: __init__.py  __version__.py
oncall_agent/core/: __init__.py  provider_factory.py  runtime_interface.py  setup_manager.py
oncall_agent/integrations/: registry.py
oncall_agent/integrations/aws/: __init__.py  client.py  cloudwatch_logs.py  cloudwatch_metrics.py
oncall_agent/integrations/azure/: README.md  __init__.py  client.py  monitor_logs.py  monitor_metrics.py
oncall_agent/integrations/base/: __init__.py  code_provider.py  llm_provider.py  log_provider.py  metrics_provider.py  runbook_provider.py
oncall_agent/integrations/gcp/: README.md  __init__.py  client.py  cloud_logging.py  cloud_monitoring.py
oncall_agent/integrations/github/: README.md  __init__.py  code_analyzer.py  repository.py
oncall_agent/integrations/llm/: README.md  __init__.py  anthropic_provider.py  azure_openai_provider.py  bedrock_provider.py  gemini_provider.py  huggingface_provider.py  manager.py  ollama_provider.py  openai_provider.py
oncall_agent/integrations/runbooks/: README.md  __init__.py  docx_parser.py  manager.py  markdown_parser.py  pdf_parser.py  web_parser.py
oncall_agent/utils/: config_validator.py
requirements/: api.txt  aws.txt  base.txt  dev.txt  optional.txt
scripts/: run-tests.sh
tests/: conftest.py
tests/unit/: __init__.py
tests/unit/test_core/: test_provider_factory.py  test_runtime_interface.py  test_setup_manager.py
tests/unit/test_integrations/: test_aws_integrations.py  test_base_providers.py  test_github_integration.py  test_llm_providers.py  test_new_llm_providers.py  test_registry.py  test_runbook_integrations.py
tests/unit/test_utils/: test_config_validator.py
